--- a/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -12,4 +12,5 @@
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
-         
+            <objects>
+                <viewController id="01J-lp-oVM" sceneMemberI
