--- a/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -21,4 +21,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+      
