--- a/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -23,4 +23,5 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-      
+            <point key="canvasLocation" x="53" y="375"/>
+        </scene>
