--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -12,3 +12,5 @@
     <scenes>
         <!--My Stocks-->
         <scene sceneID="LgC-Gz-8fs">
+            <objects>
+                <viewController id="LCn-cc-Sap" cus
