update build files

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -13,4 +13,4 @@
         <!--My Stocks-->
         <scene sceneID="LgC-Gz-8fs">
             <objects>
-                <viewController id="LCn-cc-Sap" cus
+                <viewController id="LCn-cc-Sap" customClass="StockViewController" customModule="KrasamoStockTracker" customModuleProvider="t
