--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -15,4 +15,5 @@
             <objects>
                 <viewController id="LCn-cc-Sap" customClass="StockViewController" customModule="KrasamoStockTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CqG-2W-9hu">
-                        <rect key="frame
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizing
