--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -16,4 +16,5 @@
                 <viewController id="LCn-cc-Sap" customClass="StockViewController" customModule="KrasamoStockTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CqG-2W-9hu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
-                        <autoresizing
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+           
