--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -32,4 +32,4 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="9ZJ-JL-cye">
                                                     <rect key="frame" x="19" y="19" width="337" height="14"/>
                                                     <subviews>
-                       
+                                                        <stackView opaque="NO" contentMode=
