--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -33,4 +33,5 @@
                                                     <rect key="frame" x="19" y="19" width="337" height="14"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dT3-af-Rkt">
-                                                            <rect key="f
+                                                            <rect key="frame" x="0.0" y="0.0" width="160.5" height="14"/>
+                                           
