--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -34,4 +34,5 @@
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dT3-af-Rkt">
                                                             <rect key="frame" x="0.0" y="0.0" width="160.5" height="14"/>
-                                           
+                                                            <subviews>
+                                                         
