--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -39,4 +39,5 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="80.5" height="14"/>
                                                                     <attributedString key="attributedText">
                                                                         <fragment content="AAAA">
-                                                  
+                                                                            <attributes>
+                                                     
