--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -41,4 +41,5 @@
                                                                         <fragment content="AAAA">
                                                                             <attributes>
                                                                                 <font key="NSFont" metaFont="system" size="14"/>
-              
+                                                                            </attributes>
+ 
