--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -42,4 +42,5 @@
                                                                             <attributes>
                                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                                             </attributes>
-                                                                        </fragme
+                                                                        </fragment>
+                                                   
