--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -43,4 +43,5 @@
                                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                                             </attributes>
                                                                         </fragment>
-                                                   
+                                                                    </attributedString>
+                                                     
