--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -44,4 +44,5 @@
                                                                             </attributes>
                                                                         </fragment>
                                                                     </attributedString>
+                                                                    <nil key="highlightedColor"/>
                                                      
