--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -45,4 +45,5 @@
                                                                         </fragment>
                                                                     </attributedString>
                                                                     <nil key="highlightedColor"/>
-                                                     
+                                                                </label>
+                                                      
