--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -51,4 +51,5 @@
                                                                     <attributedString key="attributedText">
                                                                         <fragment content="000.00">
                                                                             <attributes>
-                                                                                <f
+                                                                                <font key="NSFont" metaFont="system" size="14"/>
+                            
