target/iscsi: Fix mutual CHAP auth on big-endian arches

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -53,4 +53,5 @@
                                                                             <attributes>
                                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                                             </attributes>
-               
+                                                                        </fragment>
+             
