--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -54,4 +54,5 @@
                                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                                             </attributes>
                                                                         </fragment>
-             
+                                                                    </attributedString>
+  
