--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -56,4 +56,5 @@
                                                                         </fragment>
                                                                     </attributedString>
                                                                     <nil key="highlightedColor"/>
+                                                                </label>
                                                       
