--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -62,4 +62,4 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hyI-Ow-nUv">
                                                             <rect key="frame" x="176.5" y="0.0" width="160.5" height="14"/>
                                                             <subviews>
-                                                  
+                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" trans
