--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -63,4 +63,5 @@
                                                             <rect key="frame" x="176.5" y="0.0" width="160.5" height="14"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="f4S-jq-hnD" userLabel="Market High">
-                                                                    <rect key="frame"
+                                                                    <rect key="frame" x="0.0" y="0.0" width="76.5" height="14"/>
+                                    
