--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -66,4 +66,5 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="76.5" height="14"/>
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Up Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="JnK-r8-wgi">
-                                                 
+                                                                            <rect key="frame" x="0.0" y="0.0" width="9" height="14"/>
+             
