Update by GitHub Action

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -70,4 +70,5 @@
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="14" id="0yp-ba-ihs"/>
                                                                                 <constraint firstAttribute="width" constant="9" id="TzT-bo-WaW"/>
-                 
+                                                                            </constraints>
+                    
