--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -71,4 +71,5 @@
                                                                                 <constraint firstAttribute="height" constant="14" id="0yp-ba-ihs"/>
                                                                                 <constraint firstAttribute="width" constant="9" id="TzT-bo-WaW"/>
                                                                             </constraints>
-                    
+                                                                        </imageView>
+                  
