--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -78,4 +78,5 @@
                                                                                 <fragment content="000.00">
                                                                                     <attributes>
                                                                                         <font key="NSFont" metaFont="system" size="14"/>
-                                   
+                                                                                    </attributes>
+                    
