--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -79,4 +79,5 @@
                                                                                     <attributes>
                                                                                         <font key="NSFont" metaFont="system" size="14"/>
                                                                                     </attributes>
-                    
+                                                                                </fragment>
+           
