--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -80,4 +80,5 @@
                                                                                         <font key="NSFont" metaFont="system" size="14"/>
                                                                                     </attributes>
                                                                                 </fragment>
-           
+                                                                            </attributedString>
+      
