Run scan-local.sh on sonarqube:...

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -81,4 +81,4 @@
                                                                                     </attributes>
                                                                                 </fragment>
                                                                             </attributedString>
-      
+                                                                            <nil 
