Ignored leaks update.

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -81,4 +81,5 @@
                                                                                     </attributes>
                                                                                 </fragment>
                                                                             </attributedString>
-                                                                            <nil 
+                                                                            <nil key="highlightedColor"/>
+                                                        
