--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -91,4 +91,5 @@
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Down Arrow" translatesAutoresizingMaskIntoConstraints="NO" id="ktC-1y-ku5">
                                                                             <rect key="frame" x="0.0" y="0.0" width="9" height="14"/>
                                                                             <constraints>
-                                                                                <con
+                                                                                <constraint firstAttribute="height" constant="14" id="Xvl-P3-Lnp"/>
+                     
