Update Gemfile for Zuulv3

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -93,4 +93,5 @@
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="14" id="Xvl-P3-Lnp"/>
                                                                                 <constraint firstAttribute="width" constant="9" id="pU3-gW-ZIo"/>
+                                                                            </constraints>
                            
