--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -100,4 +100,4 @@
                                                                             <attributedString key="attributedText">
                                                                                 <fragment content="000.00">
                                                                                     <attributes>
-              
+                                                                                        <font key=
