Updated .gitignore files

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -101,4 +101,5 @@
                                                                                 <fragment content="000.00">
                                                                                     <attributes>
                                                                                         <font key="NSFont" metaFont="system" size="14"/>
-                                             
+                                                                                    </attributes>
+   
